ScheduleController, ScheduleService, ExceptionAdvice Lv7 README 마무리, 전체적인 실수 정리